--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
         <header>
-                <img src="../exercice3/image/header1.png" alt="header" title="Header" class="imghead">
+                <img src="image\header1.png" alt="header" title="Header" class="imghead">
                 
             </header> 
 
