--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 </head>
 
 <body>
@@ -29,10 +30,11 @@
     <div class="citation">
         <a href="https://www.cousteau.org/" type="_blank">
             <blockquote>
-                "Les missions impossibles sont les seules qui réussissent"
+                <em>"Les missions impossibles sont les seules qui réussissent"
                  <br> 
                 <br>
                 Jacques Cousteau
+                </em>
             </blockquote>  
         </a>
        
